--- a/style.css
+++ b/style.css
@@ -966,8 +966,8 @@ body {
 .cta-primary:hover::after,
 .floating-cta:hover::after,
 .carousel-btn:hover::after {
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
 }
 
 
@@ -1057,8 +1057,8 @@ body {
 
 .wave {
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     background: radial-gradient(circle, rgba(255, 0, 0, 0.3) 0%, rgba(255, 0, 0, 0) 70%);
     border-radius: 50%;
     transform: translate(-50%, -50%);
@@ -1243,7 +1243,12 @@ body {
 .btn-whatsapp {
     width: 100%;
     padding: 15px;
-    background: #ce0f0f;
+    background: linear-gradient(270deg, rgb(255, 0, 0), rgb(255, 102, 0));
+    background-size: 400% 400%;
+    animation: neonBackground 5s ease infinite;
+    z-index: -1;
+    box-shadow: 0 8px 25px rgba(255, 0, 0, 0.6);
+    z-index: 1000;
     color: white;
     border: none;
     border-radius: 10px;
@@ -1255,7 +1260,10 @@ body {
 }
 
 .btn-whatsapp:hover {
-    background: #8c1212;
+    background: linear-gradient(270deg, rgb(124, 9, 9), rgb(143, 87, 15));
+    background-size: 400% 400%;
+    animation: neonBackground 12s ease infinite;
+    z-index: -1;
 }
 /* =================================== */
 /*           AJUSTE HEADER FIJO       */
